[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "numba",

    # use oldest-supported-numpy which provides the oldest numpy version with
    # wheels on PyPI
    #
    # see: https://github.com/scipy/oldest-supported-numpy/blob/master/setup.cfg
    "oldest-supported-numpy"
]

[tool.black]
line-length = 79

[tool.cibuildwheel]
manylinux-i686-image = "manylinux2010"
